new package + some updates

--- a/skiworld-Client/src/main/resources/fxml/CommentsAndReports.fxml
+++ b/skiworld-Client/src/main/resources/fxml/CommentsAndReports.fxml
@@ -10,19 +10,20 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.CommentsAndReportsController">
    <children>
-      <TabPane layoutX="94.0" layoutY="101.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" styleClass="tab-header-background" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="30.0" tabMinHeight="10.0" tabMinWidth="10.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="100.0">
+      <TabPane layoutX="94.0" layoutY="101.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: black;" styleClass="tab-header-background" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="30.0" tabMinHeight="10.0" tabMinWidth="10.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="125.0" AnchorPane.topAnchor="100.0">
         <tabs>
           <Tab closable="false" text="Comments">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="commentTable" layoutX="7.0" layoutY="7.0" prefHeight="200.0" prefWidth="200.0" styleClass="list-view" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="commentTable" layoutX="7.0" layoutY="7.0" prefHeight="200.0" prefWidth="200.0" styleClass="list-view" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="120.0" AnchorPane.topAnchor="0.0">
                           <columns>
                             <TableColumn fx:id="alias" prefWidth="120.0" resizable="false" text="User's Alias" />
                             <TableColumn fx:id="comments" prefWidth="360.0" resizable="false" text="Comment" />
                               <TableColumn fx:id="dates" prefWidth="120.0" resizable="false" text="Date" />
                           </columns>
                         </TableView>
+                        <JFXButton layoutX="607.0" layoutY="39.0" onAction="#removeComment" text="Remove" AnchorPane.leftAnchor="630.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="25.0" />
                      </children>
                   </AnchorPane>
             </content>
@@ -47,6 +48,6 @@
             <Insets />
          </opaqueInsets>
       </TabPane>
-      <JFXButton layoutX="757.0" layoutY="131.0" onAction="#refreshTables" text="refresh" AnchorPane.leftAnchor="750.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="130.0" />
+      <JFXButton layoutX="757.0" layoutY="131.0" onAction="#refreshTables" text="Refresh" AnchorPane.leftAnchor="790.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="130.0" />
    </children>
 </AnchorPane>
