--- a/skiworld-Client/src/main/resources/fxml/MainPage.fxml
+++ b/skiworld-Client/src/main/resources/fxml/MainPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Box?>
 <?import javafx.scene.shape.Ellipse?>
 
-<AnchorPane depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" stylesheets="@MainStyle.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.MainPageController">
+<AnchorPane depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.MainPageController">
    <children>
       <ImageView fitHeight="500.0" fitWidth="900.0">
          <image>
@@ -63,6 +63,12 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
+      <Label layoutX="79.0" layoutY="442.0" styleClass="tooltip" text="Ski School" />
+      <Button fx:id="skischool" layoutX="38.0" layoutY="388.0" mnemonicParsing="false" onAction="#clickSchool" prefHeight="53.0" prefWidth="165.0" style="-fx-background-color: transparent;">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
    <rotationAxis>
       <Point3D x="1.0" />
